# chalk-rust

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  generate.sh  rust-toolchain.toml
.github/workflows/: publish.yml  test.yml
examples/: grpc_query.rs  integration_test.rs  offline_query.rs  online_query.rs  online_query_bulk.rs  upload_features.rs
protos/chalk/aggregate/v1/: backfill.proto  service.proto  timeseries.proto
protos/chalk/arrow/v1/: arrow.proto
protos/chalk/auth/v1/: audit.proto  permissions.proto
protos/chalk/common/v1/: chalk_error.proto  online_query.proto  upload_features.proto
protos/chalk/dataframe/v1/: dataframe.proto
protos/chalk/engine/v1/: query_server.proto
protos/chalk/expression/v1/: expression.proto
protos/chalk/graph/v1/: graph.proto  sources.proto
protos/chalk/graph/v2/: sources.proto
protos/chalk/lsp/v1/: lsp.proto
protos/chalk/utils/v1/: encoding.proto
src/: auth.rs  config.rs  error.rs  grpc_client.rs  http_client.rs  lib.rs  main.rs  offline.rs  types.rs  value.proto
tools/gen-protos/: Cargo.toml
tools/gen-protos/src/: main.rs
