[package]
name = "chalk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
tokio = {version = "1.24.2", features = ["macros", "rt-multi-thread", "tracing"]}
redis = {version="*", features=["tokio-comp"]}
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls" ] }
arrow = { version = "*" }
polars = { version = "*" }
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-datadog = "*"


[build]
rustflags = ["--cfg", "tokio_unstable"]
