[package]
name = "chalk-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for the Chalk feature store"
license = "Apache-2.0"
repository = "https://github.com/chalk-ai/chalk-rust"
readme = "README.md"
keywords = ["chalk", "feature-store", "ml", "machine-learning"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "56", features = ["ipc_compression"] }
bytes = "1"
serde_yaml = "0.9"
dirs = "5"
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["channel", "transport", "tls", "tls-native-roots"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
